chore: make mobile responsive
Signed-off-by: Spazzy <brendankamp757@gmail.com>

--- a/about.html
+++ b/about.html
@@ -13,11 +13,17 @@
   </head>
   <body>
 
-    <nav class="navbar navbar-custom navbar-expand">
+    <nav class="navbar navbar-custom navbar-expand-lg">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
             <li class="nav-item active">
-              <a class="nav-link" href="about.html">About us</a>
+              <a class="nav-link" href="about.html">About Us</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="program.html">Program</a>
@@ -27,7 +33,7 @@
             </li>
           </ul>
         </div>
-      </nav>
+    </nav>
 
     <div class="container content">
         <div class="row">
