chore: add sponsors
Signed-off-by: Spazzy <brendankamp757@gmail.com>

--- a/program.html
+++ b/program.html
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-custom navbar-expand-lg navbar-static-top">
       <div class="container-fluid ">
         <div class="col-sm-8 col-8 col-md-8 ms-0 ms-lg-5">
-        <a class="navbar-brand " href="#">
+        <a class="navbar-brand " href="index.html">
           <img src="./images/logo_nav.png" class="img-fluid"/>
         </a>
         </div>
@@ -25,9 +25,6 @@
 		    </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item me-5">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
             <li class="nav-item me-5">
               <a class="nav-link" href="about.html">About Us</a>
             </li>
@@ -41,18 +38,32 @@
         </div>
       </div>
     </nav>
+
     <main role="main">
+      <div class="container-fluid">
       <div class="row me-0">
         <div class="col-1 col-sm-0 pe-0 me-0">
         </div>
-        <div class="col-10 col-lg-4 me-1 ms-3 mt-5 mx-lg-5 ps-lg-4">
+        <div class="col-10 col-lg-4 me-1 ms-3 mt-5 ps-lg-4">
           <h3 class="content">Coming Soon....</h3>
         </div>
         <div class="col-1 pe-0 me-0">
         </div>
-        <div class="col-10 col-lg-4 mx-1 pe-lg-0 me-lg-0">
+        <div class="col-10 col-lg-4">
         <img src="./images/art_work.png" class="img-fluid"/> <br />
         </div>
+      </div>
+      <div class="row sponsors mt-3 pt-2 px-2 pb-2 justify-content-center">
+        <div class="col-10 col-lg-4 mx-1 pe-lg-0 me-lg-0 align-self-center">
+          <h3>Made possible with support from:</h3>
+        </div>
+        <div class="col-8 col-lg-1">
+          <img src="./images/sponsor_one.png" class="img-fluid" />
+        </div>
+        <div class="col-8 col-lg-2 align-self-center">
+          <img src="./images/sponsor_two.jpg" class="img-fluid" />
+        </div>
+      </div>
       </div>
     </main>
 
