--- a/about.html
+++ b/about.html
@@ -10,26 +10,49 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Afacad:wght@600&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
   </head>
   <body>
 
     <nav class="navbar navbar-custom navbar-expand-lg navbar-static-top">
       <div class="container-fluid ">
         <div class="col-sm-8 col-8 col-md-8 ms-0 ms-lg-5">
-        <a class="navbar-brand " href="index.html">
+        <a class="navbar-brand " href="#">
           <img src="./images/logo_nav.png" class="img-fluid"/>
         </a>
         </div>
-		    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+		    <button 
+          class="navbar-toggler" 
+          type="button" 
+          data-bs-toggle="collapse" 
+          data-bs-target="#navbarNav" 
+          aria-controls="navbarNav" 
+          aria-expanded="false" 
+          aria-label="Toggle navigation">
 		      <span class="navbar-toggler-icon"></span>
 		    </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item me-5">
-              <a class="nav-link active" href="about.html">About Us</a>
+              <a class="nav-link" href="about.html">About Us</a>
             </li>
-            <li class="nav-item me-5">
-              <a class="nav-link" href="program.html">Program</a>
+            <li class="nav-item me-5 dropdown">
+              <a 
+                class="nav-link dropdown-toggle" 
+                href="program.html" 
+                id="navbarDropdown" 
+                data-bs-toggle="dropdown"
+                type="button"
+                aria-expanded="false">
+              Program
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="nav-item dropdown-item" href="dayone.html">Thur, 8 Feb</a></li>
+                <li><a class="nav-item dropdown-item" href="#">Fri, 9 Feb</a></li>
+                <li><a class="nav-item dropdown-item" href="#">Sat, 10 Feb</a></li>
+                <li><a class="nav-item dropdown-item" href="#">Sun, 11 Feb</a></li>
+              </ul>
             </li>
             <li class="nav-item me-5">
               <a class="nav-link" href="venues.html">Venues</a>
