--- a/program.html
+++ b/program.html
@@ -28,8 +28,21 @@
             <li class="nav-item me-5">
               <a class="nav-link" href="about.html">About Us</a>
             </li>
-            <li class="nav-item me-5">
-              <a class="nav-link active" href="program.html">Program</a>
+            <li class="nav-item me-5 dropdown">
+              <a 
+                class="nav-link dropdown-toggle" 
+                href="#" 
+                id="navbarDropdown" 
+                role="button" 
+                data-toggle="dropdown" 
+                aria-haspopup="true" 
+                aria-expanded="false">
+              Program
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Day One</a>
+              <a class="dropdown-item" href="#">Day Two</a>
+            </div>
             </li>
             <li class="nav-item me-5">
               <a class="nav-link" href="venues.html">Venues</a>
