--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="nav-item dropdown-item" href="dayone.html">Thur, 8 Feb</a></li>
-                <li><a class="nav-item dropdown-item" href="#">Fri, 9 Feb</a></li>
+                <li><a class="nav-item dropdown-item" href="daytwo.html">Fri, 9 Feb</a></li>
                 <li><a class="nav-item dropdown-item" href="#">Sat, 10 Feb</a></li>
                 <li><a class="nav-item dropdown-item" href="#">Sun, 11 Feb</a></li>
               </ul>
