--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-custom navbar-expand-lg navbar-static-top">
       <div class="container-fluid ">
         <div class="col-sm-8 col-8 col-md-8 ms-0 ms-lg-5">
-        <a class="navbar-brand " href="#">
+        <a class="navbar-brand " href="index.html">
           <img src="./images/logo_nav.png" class="img-fluid"/>
         </a>
         </div>
