fix: mobile margins
Signed-off-by: Spazzy <brendankamp757@gmail.com>

--- a/dayone.html
+++ b/dayone.html
@@ -69,7 +69,7 @@
         <div class="col-lg-6 ms-5 col-10">
           <img src="./images/program/day-01-01.jpg" class="img-fluid" /> <br />
         </div>
-        <div class="col-lg-4 col-10">
+        <div class="col-lg-4 col-10 ms-5">
           <h2 class="content">CHEEKY SNEAK PEEK | 16:00 | Filmhuis Cavia</h2>
           <p class="content">
           Get a glimpse of some of the gems across the festival program. Selected by all the curators, this block provides an overview of the stories, themes and visions explored in this first edition. Whether you are curious about or already familiar with post-porn and alternative pornography, this Cheeky Sneak Peek will excite your senses and warm you up for our 4-day journey through the vastness of sex and sexuality captured on film.
@@ -93,7 +93,7 @@
         <div class="col-lg-6 ms-5 col-10">
           <img src="./images/program/day-01-02.jpg" class="img-fluid" /> <br />
         </div>
-        <div class="col-lg-4 col-10">
+        <div class="col-lg-4 col-10 ms-5">
           <h2 class="content">ELECTRIC BODIES | 18:00 | Filmhuis Cavia</h2>
           <p class="content">
           Strong chemistry and good communication are the best ingredients for great sex. The same applies to porn. Whether watching the steamy orgies in Birthday and Fucking Mystic Orgy or the kinky playfulness in Mommy's Little Twink and Wrong Holes Only, there's nothing like witnessing a good match on screen. This selection is a celebration of sex as an open and adventurous dialogue, of those unexpected encounters that turn your world upside down. Hot and unapologetic, these films capture the magnetic forces that make some bodies impossible to resist
@@ -114,7 +114,7 @@
         <div class="col-lg-6 ms-5 col-10">
           <img src="./images/program/day-01-03.jpg" class="img-fluid" /> <br />
         </div>
-        <div class="col-lg-4 col-10">
+        <div class="col-lg-4 col-10 ms-5">
           <h2 class="content">Holy Fuck Berlin | 20:00 | Filmhuis Cavia</h2>
           <p class="content">
           Celebrating our first porn festival in Amsterdam, we are excited to screen a film from Jürgen Brüning, filmmaker and founder of the one and only Berlin Porn Film Festival. His film KLAPPE is a personal essay about his experiences working in the porn industry for more than 20 years. It is vocal, musical and punk! 
@@ -130,7 +130,7 @@ Also, Toni Karat is here! As the director of the award-winning feature documenta
       <div class="row me-0 mt-5">
         <div class="col-lg-6 ms-5 col-10">
         </div>
-        <div class="col-lg-4 col-10">
+        <div class="col-lg-4 col-10 ms-5">
           <h2 class="content">Opening Party | 21:00 - 1:00 | Vrankrijk</h2>
           <p class="content">
 Join us for an evening of celebration as we launch the festival with a night of entertainment, indulgence and pleasure. Expect DJ’s to keep you dancing, multiple performances to whet your appetite, and all the beautiful people we can legally fit into the building. Dress to impress as the Vrankrijk opens its doors to host what’s sure to be an unforgettable event.
