--- a/daytwo.html
+++ b/daytwo.html
@@ -69,7 +69,7 @@
         <div class="col-lg-6 ms-5 col-10">
           <img src="./images/program/day-02-01.jpg" class="img-fluid" /> <br />
         </div>
-        <div class="col-lg-4 col-10">
+        <div class="col-lg-4 col-10 ms-5">
           <h2 class="content">FUCK ME TO THE MOON AND BACK | 14:00 | Filmhuis Cavia</h2>
           <p class="content">
           “Do you receive me commander? It’s time for some intergalactic love.” Open the doors to the unknown and let some freaky creatures in. Who knows what possibilities exist out there? Join us as we explore this universe full of heavenly bodies and otherworldly pleasures, and travel with us from an alien future into an altered past. May the force of change be with you.
@@ -89,7 +89,7 @@
         <div class="col-lg-6 ms-5 col-10">
           <img src="./images/program/day-02-02.jpg" class="img-fluid" /> <br />
         </div>
-        <div class="col-lg-4 col-10">
+        <div class="col-lg-4 col-10 ms-5">
           <h2 class="content">SEX… IN THE CITY? | 16:00 | Filmhuis Cavia</h2>
           <p class="content">
           A main focus of the inaugural Porn Film Festival Amsterdam is to engage in a dialogue with the city. Specifically, in this segment, the aim is to explore the concept of the city as a space for sexual freedom. How are sex and freedom taking place under blatant gentrification? Amsterdam is facing a housing crisis that affects many people. But when gentrification affects sex workers in the historic Red Light District, it happens as part of a moralistic project that wants sex to be marginalised from society. This selection of films places sex in the city to contest patriarchy, capitalism, colonialism, and the police brutality that shields them all. 
@@ -109,7 +109,7 @@ After the films, we will have a conversation with local activists and sex worker
         <div class="col-lg-6 ms-5 col-10">
           <img src="./images/program/day-02-03.jpg" class="img-fluid" /> <br />
         </div>
-        <div class="col-lg-4 col-10">
+        <div class="col-lg-4 col-10 ms-5">
           <h2 class="content">Darlings | 18:00 | Filmhuis Cavia</h2>
           <p class="content">
           An arousing mix and match of films across genres, themes and style. Personal favourites of the festival organisers that transcended other blocks.
@@ -130,7 +130,7 @@ When you can’t choose between other blocks, come on over to *Darlings*.
         <div class="col-lg-6 ms-5 col-10">
           <img src="./images/program/day-02-04.jpg" class="img-fluid" /> <br />
         </div>
-        <div class="col-lg-4 col-10">
+        <div class="col-lg-4 col-10 ms-5">
           <h2 class="content">WRITTEN IN THE BODY I | 19:00 | De Uitkijk</h2>
           <p class="content">
           All bodies bear the mark of a unique history and form the ground for past and future battles. The films in this threefold selection tell intimate stories; burning, dissident and unabashedly real. Often (auto)biographical, sometimes fictionalised or abstracted into the pure language of film, these shorts will take you to some of the hidden territories of sexuality.
@@ -154,7 +154,7 @@ This first selection opens with the stunning Homem de Verdade, a sexual coming-o
         <div class="col-lg-6 ms-5 col-10">
           <img src="./images/program/day-02-05.jpg" class="img-fluid" /> <br />
         </div>
-        <div class="col-lg-4 col-10">
+        <div class="col-lg-4 col-10 ms-5">
           <h2 class="content">HEY G**GLE, TIE ME UP | 20:00 | Filmhuis Cavia</h2>
           <p class="content">
           We cam, we film, we upload, we download, we look at each other through screens. Can AI spice up our love life? What does digitization do to sex? All these electrifying possibilities that lie at our fingertips… talk about plug and play, baby! But will these binary codes expand our sexual freedom or will they have us trapped in a closed circuit? Will we end up role playing with robots, or will we become the bugs in their scripts? Follow these electronic bodies on a path between digital dystopias and self-discovery. Get ready for some downtime.
@@ -176,7 +176,7 @@ This first selection opens with the stunning Homem de Verdade, a sexual coming-o
         <div class="col-lg-6 ms-5 col-10">
           <img src="./images/program/day-02-06.jpg" class="img-fluid" /> <br />
         </div>
-        <div class="col-lg-4 col-10">
+        <div class="col-lg-4 col-10 ms-5">
           <h2 class="content">Kinkystraat | 21:00 | De Uitkijk</h2>
           <p class="content">
           Power dynamics affect multiple aspects of our lives both in and outside of the bedroom, yet they’re often not openly engaged with. Many fantasies and desires are considered taboo, somehow too confrontational for society at large. Mindfully facing one’s own vulnerabilities by testing personal boundaries and exploring fantasies can bring an unparalleled sense of trust, complexity, and deep connection for those willing to embark on this journey of self-discovery. The films in Kinkystraat aim to challenge some of the misconceptions around BDSM practices, while simultaneously shedding light on the beauty and complexity of these desires, the intricate arts of pleasure, and embracing the freedom to express one’s authentic self.
@@ -199,7 +199,7 @@ This first selection opens with the stunning Homem de Verdade, a sexual coming-o
         <div class="col-lg-6 ms-5 col-10">
           <img src="./images/program/day-02-07.jpg" class="img-fluid" /> <br />
         </div>
-        <div class="col-lg-4 col-10">
+        <div class="col-lg-4 col-10 ms-5">
           <h2 class="content">Rapture | 22:00 | Filmhuis Cavia</h2>
           <p class="content">
           Porn and religion may seem like a strange couple. Too much shame and stigma has been imposed in the name of tradition and for many there's no alternative but breaking with it all. These films, however, go one step further. By appropriating Christian art, eroticising guilt or acknowledging the mysteries of the beyond, they show that bodies are traversed by forces too mighty to temper. From the hypnotic Sodom, made out of Super 8 gay porn footage edited with Gregorian chant to the mesmerising The Shadows that Inhabit Me, where a tarot-like ritual unlocks the lusty fantasies kept in the protagonist's subconscious, this block will be a journey into the depths of the desiring soul.
