chore: add day four program
Signed-off-by: Spazzy <brendankamp757@gmail.com>

--- a/dayone.html
+++ b/dayone.html
@@ -52,8 +52,8 @@
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="nav-item dropdown-item" href="dayone.html">Thur, 8 Feb</a></li>
                 <li><a class="nav-item dropdown-item" href="daytwo.html">Fri, 9 Feb</a></li>
-                <li><a class="nav-item dropdown-item" href="#">Sat, 10 Feb</a></li>
-                <li><a class="nav-item dropdown-item" href="#">Sun, 11 Feb</a></li>
+                <li><a class="nav-item dropdown-item" href="daythree.html">Sat, 10 Feb</a></li>
+                <li><a class="nav-item dropdown-item" href="dayfour.html">Sun, 11 Feb</a></li>
               </ul>
             </li>
             <li class="nav-item me-5">
