--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <li><a class="nav-item dropdown-item" href="dayone.html">Thur, 8 Feb</a></li>
                 <li><a class="nav-item dropdown-item" href="daytwo.html">Fri, 9 Feb</a></li>
                 <li><a class="nav-item dropdown-item" href="daythree.html">Sat, 10 Feb</a></li>
-                <li><a class="nav-item dropdown-item" href="#">Sun, 11 Feb</a></li>
+                <li><a class="nav-item dropdown-item" href="dayfour.html">Sun, 11 Feb</a></li>
               </ul>
             </li>
             <li class="nav-item me-5">
