chore: add team
Signed-off-by: Spazzy <brendankamp757@gmail.com>

--- a/about.html
+++ b/about.html
@@ -86,7 +86,14 @@
           <h3 class="content">Community.</h3>
 
           <p class="content">We live in a city which, while calling itself tolerant, makes it increasingly hard for many to stay. We believe in the potential of real-life encounters to challenge and reconquer the public space.</p>
-
+          <hr/>
+          <h2 class="content">Festival Team</h3>
+          <p class="content"><strong>Bear Silver</strong> (he/they)</p>
+          <p class="content"><strong>Luisa González</strong> (she/they)</p>
+          <p class="content"><strong>Hyeisoo</strong> (she/her)</p>
+          <p class="content"><strong>Coco Kokoschka</strong> (she/they)</p>
+          <p class="content"><strong>Samuel Witteveen</strong> (he/they)</p>
+          <p class="content"><strong>Jessie</strong> (she/her)</p>
         </div>
         <div class="col-1 pe-0 me-0">
         </div>
