--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
               </ul>
             </li>
             <li class="nav-item me-5">
-              <a class="nav-link" href="venues.html">Venues</a>
+              <a class="nav-link" href="venues.html">Practical Info</a>
             </li>
           </ul>
         </div>
