--- a/daytwo.html
+++ b/daytwo.html
@@ -57,7 +57,7 @@
               </ul>
             </li>
             <li class="nav-item me-5">
-              <a class="nav-link" href="venues.html">Venues</a>
+              <a class="nav-link" href="venues.html">practical Info</a>
             </li>
           </ul>
         </div>
