--- a/program.html
+++ b/program.html
@@ -45,7 +45,7 @@
             </div>
             </li>
             <li class="nav-item me-5">
-              <a class="nav-link" href="venues.html">Venues</a>
+              <a class="nav-link" href="venues.html">Practical Info</a>
             </li>
           </ul>
         </div>
