chore: add workshops to day three
Signed-off-by: Spazzy <brendankamp757@gmail.com>

--- a/daythree.html
+++ b/daythree.html
@@ -224,6 +224,63 @@ So, buckle up loves, you‘re in for a ride. The screening will preview the film
         </div>
       </div>
       <hr/>
+      <div class="row me-0 mt-5">
+        <div class="col-lg-6 ms-5 col-10">
+        </div>
+        <div class="col-lg-4 col-10 ms-5">
+          <h2 class="content">DIY PORN ZINE | 13:00 - 15:00 | PIC</h2>
+          <p class="content">
+          Are you tired of not seeing porn that reflects your own fantasies and desires?
+          In this workshop you get to make these fantasies, desires and perversions come alive!
+          With workshop facilitation by zine-makers Cat and Jack, this collective DIY zine will be structured after old school porn magazines. But the content will be as weird, queer and kinky as you, the participant, would like it to be.
+          
+          Materials to cut and photocopy from will be provided. Please feel free to also bring your own material in the form of photos, text and visuals to use or share.
+          
+          Cat (she/her) is a retired stripper, zine-maker and illustrator that wants to explore the seedy alleys of their sexuality through art.
+          Jack P (he/him/他) loves bringing dirty minds together to create and collaborate through making DIY queer porn, theatre and zines.
+          </p>
+        </div>
+      </div>
+      <hr/>
+      <div class="row me-0 mt-5">
+        <div class="col-lg-6 ms-5 col-10">
+        </div>
+        <div class="col-lg-4 col-10 ms-5">
+          <h2 class="content">Burlesque for all Genders workshop | 15:00
+            - 17:00 | Clifford Studios</h2>
+          <p class="content">
+        In this workshop, we will explore what burlesque looks and feels like for people of all genders. 
+        What we will cover:</p>
+<ul class="content">
+  <li>quick history of burlesque and in particular gender-play and the presence
+    of male, trans- and non-binary bodies in this art form</li>
+  <li>warm up with simple but fun moves</li>
+  <li>learn the basis of burlesque tease and practise how this could look when
+    interpreted differently</li>
+  <li>practice until you find what feels good for your body</li>
+</ul>
+
+          <p class="content">
+All the moves can be modified to suit you and no dance experience is required.
+This is not a cross-dressing or drag workshop, but a movement workshop about
+finding sexy, empowering moves that work for you just as you are.</p>
+
+          <p class="content">
+Please wear clothes that you feel comfortable in and that give you freedom of
+movement. Bring one item with sleeves and a front opening, this could be
+a bathrobe, a jacket, a button down shirt, a cardigan, anything that suits your
+mood and is easy to remove. This will be the only element of clothing we will
+remove in class. Shoes are not necessary. </p>
+
+          <p class="content">
+Bustie La Tish is a burlesque performer from Amsterdam who has performed across
+Europe. Bustie is the founder and co-producer of the inclusive and activist
+shows PUSSY GRABS BACK! and GOSH! She also runs the Amsterdam chapter of the
+Smut Slam, a community storytelling evening all about sex.
+          </p>
+        </div>
+      </div>
+      <hr/>
       <div class="row me-0 sponsors justify-content-center">
         <div class="col-10 col-lg-4 align-self-center">
           <h3>Made possible with support from:</h3>
