chore: final touches
Signed-off-by: Spazzy <brendankamp757@gmail.com>

--- a/dayfour.html
+++ b/dayfour.html
@@ -84,15 +84,15 @@ A special selection from Filmhuis Cavia's 1990s queer porn tapes played on VHS.
           <img src="./images/program/day-04-02.jpg" class="img-fluid" /> <br />
         </div>
         <div class="col-lg-4 col-10 ms-5">
-          <h2 class="content"> Been Around | 13:00 | Filmhuis Cavia</h2>
+          <h2 class="content"> BEEN AROUND | 13:00 | Filmhuis Cavia</h2>
           <p class="content">
 To say that one has been around the block means that they’re experienced, that they’ve acquired skills and knowledge, that they know what they’re doing. This collection of films explores the beautiful and complex themes of ageing and sexuality while simultaneously challenging stereotypes and highlighting the power of human connection at any age. Sexuality is a lifelong journey, so let’s embrace the joy of being fully alive, no matter what age we are.
           </p>
           <p class="content"><strong>Babygurl Big Birthday Bang</strong>, Mahx Capacity, 2022, USA, 15’</p>
           <p class="content"><strong>Jackob et Jim</strong>, Wolfgang Wisely, 2022, UK, 3’</p> 
-          <p class="content"><strong>Natural Pleasures</strong>,Rafał Żwirek & Aga Szreder, Poland,23’</p>
+          <p class="content"><strong>Natural Pleasures</strong>, Rafał Żwirek & Aga Szreder, 2023, Poland, 23’</p>
           <p class="content"><strong>House of Woland</strong>, Josie Hess and Morgana Muses, 2023, Australia, 30’</p> 
-          <p class="content"><strong>G#Old Man</strong>, Werther Germondari, Victory Storari,2024, Italy,  10’</p> 
+          <p class="content"><strong>G#Old Man</strong>, Werther Germondari, Victory Storari, 2024, Italy, 10’</p> 
           <p class="content"><strong>Cinema Fetish</strong>, Morgana Mayer, 2023, Italy, 5’</p>     
           <p class="content"><strong>Aunty Fernanda</strong>, Neoza Goffin, 2021, Belgium, 2’</p>
           <br/>
@@ -109,12 +109,12 @@ To say that one has been around the block means that they’re experienced, that
           <p class="content">
 This block is an invitation to visit animal worlds-whether it’s a kinky fantasy like in The Animals Revenge, or a way for understanding how we navigate in herds to protect and love each other like Dino Sluts Rising and The Secret Love Life of the Urban Leopard. Animals have a lot of things to teach us, and one of those is how to be sexually free. 
           </p>
-          <p class="content"><strong>The Secret Love Life of the Urban Leopard Pina Brutal</strong>, 2019, Germany, 35’</p>
-          <p class="content"><strong>Study Meeting Sakura Ardila Ortiz</strong>, 2023, Colombia, 3’</p>
-          <p class="content"><strong>THE CRAZY CAT LADY Charlie G Fennel</strong>, 2022, USA & Italy, 6’</p>
-          <p class="content"><strong>The Animals' Revenge Werther Germondari</strong>, 2024, Italy, 1’</p>
-          <p class="content"><strong>La Follia Wild Cat & Werther Germondari</strong>, 2023, Italy, 11’</p>
-          <p class="content"><strong>Dino Sluts Rising: 9 to 5 Billion BC Vidi Ho</strong>, 2022, The Netherlands, 23’</p>
+          <p class="content"><strong>The Secret Love Life of the Urban Leopard</strong>, Pina Brutal 2019, Germany, 35’</p>
+          <p class="content"><strong>Study Meeting</strong>, Sakura Ardila Ortiz, 2023, Colombia, 3’</p>
+          <p class="content"><strong>THE CRAZY CAT LADY</strong>, Charlie G Fennel, 2022, USA & Italy, 6’</p>
+          <p class="content"><strong>The Animals' Revenge</strong>, Werther Germondari, 2024, Italy, 1’</p>
+          <p class="content"><strong>La Follia</strong>, Wild Cat & Werther Germondari, 2023, Italy, 11’</p>
+          <p class="content"><strong>Dino Sluts Rising: 9 to 5 Billion BC</strong>, Vidi Ho, 2022, The Netherlands, 23’</p>
           <br/>
           <p class="content">Total duration:&nbsp;&nbsp;<strong>68’</strong></p>
         </div>
@@ -129,12 +129,12 @@ This block is an invitation to visit animal worlds-whether it’s a kinky fantas
           <p class="content">
 This selection is an ode to the love we make when we have sex. A love song to those hot and steamy encounters that are touching and tender too. Sometimes we fuck hard because we love hard. Sometimes we get all sweaty because our bodies want to melt together. Sometimes sex moves us beyond words. Sometimes we look at our bodies fuck in the mirror and it makes us giggle because it is all so odd and terrifyingly beautiful. Here’s to all the broken-hearted, the crazy-in-love and everyone else who wants to be reminded of the poetry and joy of fucking.
           </p>
-          <p class="content"><strong>A Smut Story</strong>, Julia De Martino , 2021, Germany, 2’</p>
+          <p class="content"><strong>A Smut Story</strong>, Julia De Martino, 2021, Germany, 2’</p>
           <p class="content"><strong>Fucking Esthetisch</strong>, Fucking Esthetisch, 2023, The Netherlands, 7’</p>
           <p class="content"><strong>Liquid love</strong>, Massimo Clemente, 2021, Italy, 7’</p>
           <p class="content"><strong>Minha Parte / My Part</strong>, Thais de Almeida Prado, 2022, Brazil, 7’</p>
           <p class="content"><strong>AFTER MATTER COMES ENERGY</strong>, Nour Beetch, 2021, Belgium, 19’</p>
-          <p class="content"><strong>Extrasensory, Ryan Suits</strong>, 2019, USA, 9’</p>
+          <p class="content"><strong>Extrasensory</strong>, Ryan Suits, 2019, USA, 9’</p>
           <p class="content"><strong>Cuddle</strong>, Nat Portnoy, Ella Venus & Zina Berlin, 2023, The Netherlands, 6’</p>
           <p class="content"><strong>L’Orange</strong>, Hayes Hoey & Mason Soto, 2022, USA, 8’</p>
           <p class="content"><strong>A Flor de Piel</strong>, Andor Polgar, Sick Ducks, Ju Goma, Andrew Visser, 2022, The Netherlands, 4’</p>
@@ -173,7 +173,7 @@ Ever fucked in a car wreck? Or played hide and seek with your lover in a deserte
           </p>
           <p class="content"><strong>Besichtigung / Viewing</strong>, Jan Soldat, 2023, Austria, 4’</p>
           <p class="content"><strong>Stalking Athens</strong>, Fucking Conflicts, 2023, Germany & Greece, 11’</p>
-          <p class="content"><strong>FABRIK, Sverre Aune</strong>, 2022, Germany, 19’</p>
+          <p class="content"><strong>FABRIK</strong>, Sverre Aune, 2022, Germany, 19’</p>
           <p class="content"><strong>My Garage My Rules</strong>, Manon Praline & Torri Lisek, 2020, Germany, 10’</p>
           <p class="content"><strong>Car Love</strong>, Magdalena Mayr & Maximilian Holetschek, 2022, Austria, 9'</p> 
           <p class="content"><strong>Crash</strong>, Four Chambers, 2020, UK, 15’</p>
@@ -198,9 +198,10 @@ This is the story of the legendary Palm Drive Video, a kinky gay porn studio run
       <hr/>
       <div class="row me-0 mt-5">
         <div class="col-lg-6 ms-5 col-10">
+          <img src="./images/program/day-04-08.jpg" class="img-fluid" /> <br />
         </div>
         <div class="col-lg-4 col-10 ms-5">
-          <h2 class="content">NEEDLE PLAY (WORKSHOP) | 13:00 | PIC</h2>
+          <h2 class="content">NEEDLE PLAY workshop | 13:00 | PIC</h2>
           <p class="content">
 No previous experience necessary. 
           </p>
@@ -211,7 +212,8 @@ Kiki and Rick will share the medical evolution and navigation within alternative
 Under supervision, participants can delve into hands-on practice, learning and experimenting on a partner or themselves. All necessary materials for practice will be provided, ensuring a safe and tantalising experience for those delving into the realm of medical fetish.
           </p>
           <br/>
-          <p class="content">Total duration:&nbsp;&nbsp;<strong>84’</strong></p>
+          <p class="content">Max:&nbsp;&nbsp;<strong>12 participants</strong></p>
+          <p class="content">Book <a href="https://www.amsterdamalternative.nl/agenda/15244/workshop-needle-play">here</a></p>
         </div>
       </div>
       <hr/>
