--- a/dayone.html
+++ b/dayone.html
@@ -76,7 +76,7 @@
           </p>
           <p class="content"><strong>Stranger in Paradise</strong>, Nat Portnoy, 2023, The Netherlands, 6'</p>
           <p class="content"><strong>Homem de Verdade</strong>, Rafael Rudolf, 2023, Brazil, 17'</p>
-          <p class="content"><strong>Ghost Song:director’s cut</strong>, RTALIN and JorgeTheObscene, 2023, Germany, 3'</p>
+          <p class="content"><strong>Ghost Song: director’s cut</strong>, RTALIN and JorgeTheObscene, 2023, Germany, 3'</p>
           <p class="content"><strong>Walking a Fine Line</strong>, abcde Flash, 2019, Switzerland, 4'</p>
           <p class="content"><strong>Study Meeting</strong>, Sakura Ardila Ortiz, 2023, Colombia, 3’</p>
           <p class="content"><strong>Jackob et Jim</strong>, Wolfgang Wisely, 2022, UK, 2'</p>
@@ -100,7 +100,7 @@
           </p>
           <p class="content"><strong>Mommy's Little Twink</strong>, Torri Lisek, 2022, Germany, 10'</p>
           <p class="content"><strong>Birthday</strong>, Thousand Faces, 2023, UK, 16'</p>
-          <p class="content"><strong>Wrong Holes Only</strong>, June Fontaine & Revenge, France, 2023, 9'</p>
+          <p class="content"><strong>Wrong Holes Only</strong>, June Fontaine & Revenge, 2023, France, 9'</p>
           <p class="content"><strong>CLAP</strong>, CLAP! Collectif, 2022, Belgium, 7'</p>
           <p class="content"><strong>Fucking Mystic Orgy</strong>, Chelsea Poe, Courtney Trouble & Ava LeFemme, 2014, US, 10'</p>
           <p class="content"><strong>Orgy #004: Fuck Your Friends</strong>, AORTA films, 2023, US, 16'</p>
@@ -115,7 +115,7 @@
           <img src="./images/program/day-01-03.jpg" class="img-fluid" /> <br />
         </div>
         <div class="col-lg-4 col-10 ms-5">
-          <h2 class="content">Holy Fuck Berlin | 20:00 | Filmhuis Cavia</h2>
+          <h2 class="content">HOLY FUCK BERLIN | 20:00 | Filmhuis Cavia</h2>
           <p class="content">
           Celebrating our first porn festival in Amsterdam, we are excited to screen a film from Jürgen Brüning, filmmaker and founder of the one and only Berlin Porn Film Festival. His film KLAPPE is a personal essay about his experiences working in the porn industry for more than 20 years. It is vocal, musical and punk! 
 Also, Toni Karat is here! As the director of the award-winning feature documentary NARCISSISM - The Auto-Erotic Images, they bring us back to the unique and timeless atmospheric attic in Berlin. Presented at our cinema is some hot solo-fun in front of the mirror that conveys tranquil and authentic intimacy.
@@ -129,14 +129,16 @@ Also, Toni Karat is here! As the director of the award-winning feature documenta
       <hr/>
       <div class="row me-0 mt-5">
         <div class="col-lg-6 ms-5 col-10">
+          <img src="./images/program/day-01-04.jpg" class="img-fluid" /> <br />
         </div>
         <div class="col-lg-4 col-10 ms-5">
-          <h2 class="content">Opening Party | 21:00 - 1:00 | Vrankrijk</h2>
+          <h2 class="content">OPENING PARTY | 21:00 - 1:00 | Vrankrijk</h2>
           <p class="content">
 Join us for an evening of celebration as we launch the festival with a night of entertainment, indulgence and pleasure. Expect DJ’s to keep you dancing, multiple performances to whet your appetite, and all the beautiful people we can legally fit into the building. Dress to impress as the Vrankrijk opens its doors to host what’s sure to be an unforgettable event.
           </p>
         </div>
       </div>
+      <hr/>
       <div class="row me-0 sponsors justify-content-center">
         <div class="col-10 col-lg-4 align-self-center">
           <h3>Made possible with support from:</h3>
