--- a/daytwo.html
+++ b/daytwo.html
@@ -97,9 +97,9 @@
 After the films, we will have a conversation with local activists and sex workers fighting against the gentrification of the Red Light District, and the project of marginalizing sex work even more through the construction of a centre for prostitution on the outskirts of Amsterdam.
           </p>
           <p class="content"><strong>Levidis Fucking Conflicts</strong>, 2023, Germany, 11’</p>
-          <p class="content"><strong>Gentrificacao Bruna Kury</strong>, 2020, Brazil, 10’</p>
-          <p class="content"><strong>Say it again: “I love the police” Puppy Please</strong>, 2023, France, 18’</p>
-          <p class="content"><strong>Fuck the Fascism Maria</strong>, Basura, 2016, Chile, Spain, Germany, 8’</p>
+          <p class="content"><strong>Gentrificacao</strong>, Bruna Kury, 2020, Brazil, 10’</p>
+          <p class="content"><strong>Say it again: “I love the police”</strong>, Puppy Please, 2023, France, 18’</p>
+          <p class="content"><strong>Fuck the Fascism</strong>, Maria Basura, 2016, Chile, Spain, Germany, 8’</p>
           <br/>
           <p class="content">Total duration:&nbsp;&nbsp;<strong>48’ of films | 40’ discussion</strong></p>
         </div>
@@ -110,7 +110,7 @@ After the films, we will have a conversation with local activists and sex worker
           <img src="./images/program/day-02-03.jpg" class="img-fluid" /> <br />
         </div>
         <div class="col-lg-4 col-10 ms-5">
-          <h2 class="content">Darlings | 18:00 | Filmhuis Cavia</h2>
+          <h2 class="content">DARLINGS | 18:00 | Filmhuis Cavia</h2>
           <p class="content">
           An arousing mix and match of films across genres, themes and style. Personal favourites of the festival organisers that transcended other blocks.
 These are the films we fought about, slammed doors over and couldn’t get on the same page about... AND SIMPLY HAVE TO SHOW. 
@@ -177,7 +177,7 @@ This first selection opens with the stunning Homem de Verdade, a sexual coming-o
           <img src="./images/program/day-02-06.jpg" class="img-fluid" /> <br />
         </div>
         <div class="col-lg-4 col-10 ms-5">
-          <h2 class="content">Kinkystraat | 21:00 | De Uitkijk</h2>
+          <h2 class="content">KINKYSTRAAT | 21:00 | De Uitkijk</h2>
           <p class="content">
           Power dynamics affect multiple aspects of our lives both in and outside of the bedroom, yet they’re often not openly engaged with. Many fantasies and desires are considered taboo, somehow too confrontational for society at large. Mindfully facing one’s own vulnerabilities by testing personal boundaries and exploring fantasies can bring an unparalleled sense of trust, complexity, and deep connection for those willing to embark on this journey of self-discovery. The films in Kinkystraat aim to challenge some of the misconceptions around BDSM practices, while simultaneously shedding light on the beauty and complexity of these desires, the intricate arts of pleasure, and embracing the freedom to express one’s authentic self.
           </p>
@@ -187,7 +187,7 @@ This first selection opens with the stunning Homem de Verdade, a sexual coming-o
           <p class="content"><strong>home is not a harbor</strong>, Kaya Jaloza, 2022, Poland, 4’</p>
           <p class="content"><strong>KINKY VALLEY 69</strong>, Alexandre Medeiros, 2021, Brazil, 13’</p> 
           <p class="content"><strong>The Crow and the Goldcrest</strong>, An Antidote, 2023, Germany 6’</p>
-          <p class="content"><strong>Das Medusenhaupt</strong>, Lotte Latham and Viola V, Greece & UK, 3’</p> 
+          <p class="content"><strong>Das Medusenhaupt</strong>, Lotte Latham and Viola V, 2023, Greece & UK, 3’</p> 
           <p class="content"><strong>Walking a Fine Line</strong>, abcde Flash, 2019, Switzerland, 4’</p>
           <p class="content"><strong>Alchemy of the Meat</strong>, Mahx Capacity, 2023, US, 8'</p>
           <br/>
@@ -200,7 +200,7 @@ This first selection opens with the stunning Homem de Verdade, a sexual coming-o
           <img src="./images/program/day-02-07.jpg" class="img-fluid" /> <br />
         </div>
         <div class="col-lg-4 col-10 ms-5">
-          <h2 class="content">Rapture | 22:00 | Filmhuis Cavia</h2>
+          <h2 class="content">RAPTURE | 22:00 | Filmhuis Cavia</h2>
           <p class="content">
           Porn and religion may seem like a strange couple. Too much shame and stigma has been imposed in the name of tradition and for many there's no alternative but breaking with it all. These films, however, go one step further. By appropriating Christian art, eroticising guilt or acknowledging the mysteries of the beyond, they show that bodies are traversed by forces too mighty to temper. From the hypnotic Sodom, made out of Super 8 gay porn footage edited with Gregorian chant to the mesmerising The Shadows that Inhabit Me, where a tarot-like ritual unlocks the lusty fantasies kept in the protagonist's subconscious, this block will be a journey into the depths of the desiring soul.
           </p>
