--- a/daythree.html
+++ b/daythree.html
@@ -91,7 +91,7 @@ This second selection of Written in the Body opens with AUTOAGGRESSION, an extra
           <img src="./images/program/day-03-02.jpg" class="img-fluid" /> <br />
         </div>
         <div class="col-lg-4 col-10 ms-5">
-          <h2 class="content">Pillow Talk with Strangers | 16:00 | Filmhuis Cavia</h2>
+          <h2 class="content">PILLOW TALKS WITH STRANGERS | 16:00 | Filmhuis Cavia</h2>
           <p class="content">
           Polly Barton’s new book Porn: An Oral History (Fitzcarraldo 2023) is a series of frank interviews between Polly and various friends and acquaintances, discussing how they feel about porn – personally, ethically, politically. Come join Polly and the Supernormal collective as we take the book live: we’ll be talking about writing porn, watching porn, making porn and all the feelings in between. 
 Polly Barton is a writer and Japanese translator based in Bristol in the UK, and the author of Porn: An Oral History.
@@ -121,14 +121,14 @@ Diego’s talk will be illustrated with videos of the performances from Javier T
           <p class="content"><strong>Diego Galdo-González</strong> is a Junior Lecturer in Latin American and Global Studies at the Center for Latin American Research and Documentation of the University of Amsterdam, CEDLA. He has worked as a coordinator for the Amsterdam Research Centre for Gender & Sexuality and as a junior lecturer for the department of Sociology at the University of Amsterdam. His research interests lie at the intersection of sexual history, sexual cultures, and urban studies in Peru. His RM thesis aimed to trace the history of marica and queer pleasure in Lima between the 1950s and 1980s. He has published articles in GLQ: A Journal of Gay and Lesbian Studies and Argumentos, the journal of the Instituto de Estudios Peruanos.
 </p>
           <p class="content"><strong>5 min break</strong></p>
-          <p class="content"><strong>Enter the War</strong>, Anti Gonna, 2017, Ukraine, 4 miPORn</p>
-          <p class="content"><strong>Fuck the Fascism: The Crossroad of Two Worlds</strong>, Maria Basura, 2019, 10’, Chile & Spain</p>
+          <p class="content"><strong>Enter the War</strong>, Anti Gonna, 2017, Ukraine, 4’</p>
+          <p class="content"><strong>Fuck the Fascism: The Crossroad of Two Worlds</strong>, Maria Basura, 2019,  Chile & Spain, 10’</p>
           <p class="content"><strong>Sarx</strong>, Viola V, 2023, Macedonia, 2’</p>
           <p class="content"><strong>El día que la galaxia vulvosa casi pierde sus orgasmos</strong>, Al Borde producciones, 2023, Mexico, Colombia, 10’</p>
           <p class="content"><strong>Indómito Deseo</strong>, Diego Argote, 2022, Chile, 4’</p>
           <p class="content"><strong>Lost in Freedom</strong>, Anti Gonna, 2022, Ukraine, 8’</p>
           <br/>
-          <p class="content">Total duration:&nbsp;&nbsp;30‘ talk and screening of 1991 performances from Javier Temple | 38’ + Q&A = 85’</p>
+          <p class="content">Total duration:&nbsp;&nbsp;85’</p>
         </div>
       </div>
       <hr/>
@@ -159,7 +159,7 @@ Diego’s talk will be illustrated with videos of the performances from Javier T
           <img src="./images/program/day-03-05.jpg" class="img-fluid" /> <br />
         </div>
         <div class="col-lg-4 col-10 ms-5">
-          <h2 class="content"> queer.red presents!  Down & Dirty DIY Screening: Queer Sex Worker Porn | 20:00 | Filmhuis Cavia</h2>
+          <h2 class="content">queer.red presents! DOWN & DIRTY DIY SCREENING: QUEER SEX WORKER PORN | 20:00 | Filmhuis Cavia</h2>
           <p class="content">
           Raunchy. Hot. Political. DIY.
  
@@ -226,9 +226,10 @@ So, buckle up loves, you‘re in for a ride. The screening will preview the film
       <hr/>
       <div class="row me-0 mt-5">
         <div class="col-lg-6 ms-5 col-10">
+          <img src="./images/program/day-03-08.jpg" class="img-fluid" /> <br />
         </div>
         <div class="col-lg-4 col-10 ms-5">
-          <h2 class="content">DIY PORN ZINE | 13:00 - 15:00 | PIC</h2>
+          <h2 class="content">DIY PORN ZINE workshop | 13:00 - 15:00 | PIC</h2>
           <p class="content">
           Are you tired of not seeing porn that reflects your own fantasies and desires?
           In this workshop you get to make these fantasies, desires and perversions come alive!
@@ -239,15 +240,17 @@ So, buckle up loves, you‘re in for a ride. The screening will preview the film
           Cat (she/her) is a retired stripper, zine-maker and illustrator that wants to explore the seedy alleys of their sexuality through art.
           Jack P (he/him/他) loves bringing dirty minds together to create and collaborate through making DIY queer porn, theatre and zines.
           </p>
+          <p class="content">Max:&nbsp;&nbsp;<strong>15 participants</strong></p>
+          <p class="content">Book <a href="https://www.amsterdamalternative.nl/agenda/15237/workshop-diy-porn-zine">here</a></p>
         </div>
       </div>
       <hr/>
       <div class="row me-0 mt-5">
         <div class="col-lg-6 ms-5 col-10">
+          <img src="./images/program/day-03-09.jpg" class="img-fluid" /> <br />
         </div>
         <div class="col-lg-4 col-10 ms-5">
-          <h2 class="content">Burlesque for all Genders workshop | 15:00
-            - 17:00 | Clifford Studios</h2>
+          <h2 class="content">BURLESQUE FOR ALL GENDERS workshop | 15:00 - 17:00 | Clifford Studios</h2>
           <p class="content">
         In this workshop, we will explore what burlesque looks and feels like for people of all genders. 
         What we will cover:</p>
@@ -278,6 +281,8 @@ Europe. Bustie is the founder and co-producer of the inclusive and activist
 shows PUSSY GRABS BACK! and GOSH! She also runs the Amsterdam chapter of the
 Smut Slam, a community storytelling evening all about sex.
           </p>
+          <p class="content">Max:&nbsp;&nbsp;<strong>20 participants</strong></p>
+          <p class="content">Book <a href="https://www.amsterdamalternative.nl/agenda/15238/burlesque-for-all-genders">here</a></p>
         </div>
       </div>
       <hr/>
