chore: add new sponsors
Signed-off-by: Spazzy <brendankamp757@gmail.com>

--- a/dayfour.html
+++ b/dayfour.html
@@ -217,8 +217,8 @@ Under supervision, participants can delve into hands-on practice, learning and e
         </div>
       </div>
       <hr/>
-      <div class="row me-0 sponsors justify-content-center">
-        <div class="col-10 col-lg-4 align-self-center">
+      <div class="row sponsors mt-3 pt-2 px-2 pb-2 justify-content-center">
+        <div class="col-10 col-lg-4 mx-1 pe-lg-0 me-lg-0 align-self-center">
           <h3>Made possible with support from:</h3>
         </div>
         <div class="col-8 col-lg-1">
@@ -226,6 +226,12 @@ Under supervision, participants can delve into hands-on practice, learning and e
         </div>
         <div class="col-8 col-lg-2 align-self-center">
           <img src="./images/sponsor_two.jpg" class="img-fluid" />
+        </div>
+        <div class="col-8 col-lg-2 align-self-center">
+          <img src="./images/sponsor_three.jpg" class="img-fluid" />
+        </div>
+        <div class="col-8 col-lg-2 align-self-center">
+          <img src="./images/sponsor_four.jpg" class="img-fluid" />
         </div>
       </div>
       </div>
