--- a/venues.html
+++ b/venues.html
@@ -180,6 +180,12 @@
         <div class="col-8 col-lg-2 align-self-center">
           <img src="./images/sponsor_two.jpg" class="img-fluid" />
         </div>
+        <div class="col-8 col-lg-2 align-self-center">
+          <img src="./images/sponsor_three.jpg" class="img-fluid" />
+        </div>
+        <div class="col-8 col-lg-2 align-self-center">
+          <img src="./images/sponsor_four.jpg" class="img-fluid" />
+        </div>
       </div>
       </div>
     </main>
