--- a/dayone.html
+++ b/dayone.html
@@ -139,8 +139,8 @@ Join us for an evening of celebration as we launch the festival with a night of 
         </div>
       </div>
       <hr/>
-      <div class="row me-0 sponsors justify-content-center">
-        <div class="col-10 col-lg-4 align-self-center">
+      <div class="row sponsors mt-3 pt-2 px-2 pb-2 justify-content-center">
+        <div class="col-10 col-lg-4 mx-1 pe-lg-0 me-lg-0 align-self-center">
           <h3>Made possible with support from:</h3>
         </div>
         <div class="col-8 col-lg-1">
@@ -148,6 +148,12 @@ Join us for an evening of celebration as we launch the festival with a night of 
         </div>
         <div class="col-8 col-lg-2 align-self-center">
           <img src="./images/sponsor_two.jpg" class="img-fluid" />
+        </div>
+        <div class="col-8 col-lg-2 align-self-center">
+          <img src="./images/sponsor_three.jpg" class="img-fluid" />
+        </div>
+        <div class="col-8 col-lg-2 align-self-center">
+          <img src="./images/sponsor_four.jpg" class="img-fluid" />
         </div>
       </div>
       </div>
