--- a/daytwo.html
+++ b/daytwo.html
@@ -218,8 +218,8 @@ This first selection opens with the stunning Homem de Verdade, a sexual coming-o
         </div>
       </div>
       <hr/>
-      <div class="row me-0 sponsors justify-content-center">
-        <div class="col-10 col-lg-4 align-self-center">
+      <div class="row sponsors mt-3 pt-2 px-2 pb-2 justify-content-center">
+        <div class="col-10 col-lg-4 mx-1 pe-lg-0 me-lg-0 align-self-center">
           <h3>Made possible with support from:</h3>
         </div>
         <div class="col-8 col-lg-1">
@@ -227,6 +227,12 @@ This first selection opens with the stunning Homem de Verdade, a sexual coming-o
         </div>
         <div class="col-8 col-lg-2 align-self-center">
           <img src="./images/sponsor_two.jpg" class="img-fluid" />
+        </div>
+        <div class="col-8 col-lg-2 align-self-center">
+          <img src="./images/sponsor_three.jpg" class="img-fluid" />
+        </div>
+        <div class="col-8 col-lg-2 align-self-center">
+          <img src="./images/sponsor_four.jpg" class="img-fluid" />
         </div>
       </div>
       </div>
